# fen_converter

./: .gitignore  README.md  agents.md  convert.py  fen_fix.py  generate_contours.py  generate_templates.py  piece_templates_chesscom.npz  piece_templates_data.py  pyproject.toml  requirements.txt
cine_storage/: app.py  models.py
cine_storage/static/: style.css
cine_storage/templates/: index.html  upload.html
fen_converter/: README.md  convert.py
src/fen_converter/: __init__.py  board.py  cli.py  fen.py  labeler.py
tests/: test_board.py  test_cli.py  test_convert.py  test_fen.py  test_load_contours.py  test_load_templates.py
