[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "fen-converter"
version = "0.1.0"
description = "Interactive tool for converting chessboard screenshots to FEN"
authors = [{name = "AutoDev", email = "autodev@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python-headless==4.9.0.80",
    "numpy==1.26.4",
    "Pillow==10.3.0",
    "typer==0.12.3",
    "rich==13.7.1",
    "python-chess==1.999",
]

[project.scripts]
fen-converter = "fen_converter.cli:main"
